# sioseis

./: 72.f  AUTHOR  CHANGES  CMakeLists.txt  LICENSE  README  README.md  acored.f  acorex.f  agc.f  agcap.f  agced.f  agcex.f  apsim.f  ascebc.f  ascii2segy.f  atlantek.f  avbufi.f  avened.f  avenex.f  avenor.f  avevfc.f  avintr.f  avspin.f  biggetoke.f  bigrdline.f  bigrline.f  bldgname.c  bpass.f  byte-save.c  byte.c  cal2jul.f  calcrp.f  calcrp3d.f  caljul.f  cated.f  catex.f  cfiled.f  cfilex.f  chkbin.f  (+350 more)
cmake/: SetupDoxygen.cmake
doxygen/: Doxyfile.in  DoxygenLayout.xml.in  Doxygen_Extensions.cfg.in  doxygen.sty.in  doxygen_footer.tex.in  doxygen_header.tex.in
userdoc/: overview.tex  sioseis.bib
